--- a/package.json
+++ b/package.json
@@ -20,86 +20,85 @@
   },
   "private": true,
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.0.4",
-    "@nestjs/common": "^7.5.4",
-    "@nestjs/config": "^0.6.0",
-    "@nestjs/core": "^7.5.4",
-    "@nestjs/platform-fastify": "^7.5.4",
-    "@nestjs/swagger": "^4.7.5",
-    "@octokit/auth-app": "^2.10.2",
-    "@octokit/auth-oauth-app": "^3.0.6",
-    "@octokit/rest": "^18.0.9",
-    "axios": "^0.21.0",
-    "bluebird": "^3.7.2",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "cli-color": "^2.0.0",
-    "commander": "^6.2.0",
-    "escape-string-regexp": "^4.0.0",
-    "fastify-swagger": "^3.5.0",
-    "fs-extra": "^9.0.1",
-    "idb-keyval": "^3.2.0",
-    "js-yaml": "^3.14.0",
-    "lazysizes": "^5.2.2",
-    "linkify-it": "^3.0.2",
-    "markdown-it": "^12.0.2",
-    "node-cache": "^5.1.2",
-    "pako": "^2.0.2",
-    "parse5": "^6.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.3",
-    "simple-git": "^2.22.0",
-    "source-map-support": "^0.5.19",
-    "tslib": "^2.0.3"
+    "@actions/core": "~1.2.6",
+    "@actions/exec": "~1.0.4",
+    "@nestjs/common": "~7.6.4",
+    "@nestjs/config": "~0.6.0",
+    "@nestjs/core": "~7.6.4",
+    "@nestjs/platform-fastify": "~7.6.4",
+    "@nestjs/swagger": "~4.7.5",
+    "@octokit/auth-app": "~2.10.2",
+    "@octokit/auth-oauth-app": "~3.0.6",
+    "@octokit/rest": "~18.0.9",
+    "axios": "~0.21.0",
+    "bluebird": "~3.7.2",
+    "class-transformer": "~0.3.1",
+    "class-validator": "~0.12.2",
+    "cli-color": "~2.0.0",
+    "commander": "~6.2.0",
+    "escape-string-regexp": "~4.0.0",
+    "fastify-swagger": "~3.5.0",
+    "fs-extra": "~9.0.1",
+    "idb-keyval": "~3.2.0",
+    "js-yaml": "~3.14.0",
+    "lazysizes": "~5.2.2",
+    "linkify-it": "~3.0.2",
+    "markdown-it": "~12.0.2",
+    "node-cache": "~5.1.2",
+    "pako": "~2.0.2",
+    "parse5": "~6.0.0",
+    "reflect-metadata": "~0.1.13",
+    "rxjs": "~6.6.3",
+    "simple-git": "~2.31.0",
+    "source-map-support": "~0.5.19",
+    "tslib": "~2.0.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.2",
-    "@angular/animations": "^11.0.1",
-    "@angular/cdk": "^11.0.0",
-    "@angular/cli": "^11.0.2",
-    "@angular/common": "^11.0.1",
-    "@angular/compiler": "^11.0.1",
-    "@angular/compiler-cli": "^11.0.1",
-    "@angular/core": "^11.0.1",
-    "@angular/forms": "^11.0.1",
-    "@angular/language-service": "^11.0.1",
-    "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "^11.0.1",
-    "@angular/platform-browser-dynamic": "^11.0.1",
-    "@angular/router": "^11.0.1",
-    "@nestjs/cli": "^7.5.3",
-    "@nestjs/schematics": "^7.2.2",
-    "@nestjs/testing": "^7.5.4",
-    "@types/bluebird-global": "^3.5.12",
-    "@types/cli-color": "^2.0.0",
-    "@types/fs-extra": "^9.0.4",
-    "@types/jest": "^26.0.15",
-    "@types/js-yaml": "^3.12.5",
-    "@types/markdown-it": "^10.0.3",
-    "@types/node": "^14.14.8",
-    "@types/pako": "^1.0.1",
-    "@types/parse5": "^5.0.3",
-    "@types/source-map-support": "^0.5.3",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.3",
-    "jest-to-match-shape-of": "^1.3.1",
-    "material-design-icons": "^3.0.1",
-    "prettier": "^2.1.2",
-    "rimraf": "^3.0.2",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.11",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "type-fest": "^0.19.0",
-    "typescript": "^4.0.5",
-    "webpack-bundle-analyzer": "^4.1.0",
-    "zone.js": "^0.11.3"
+    "@angular-devkit/build-angular": "~0.1100.2",
+    "@angular/animations": "~11.0.1",
+    "@angular/cdk": "~11.0.0",
+    "@angular/cli": "~11.0.2",
+    "@angular/common": "~11.0.1",
+    "@angular/compiler": "~11.0.1",
+    "@angular/compiler-cli": "~11.0.1",
+    "@angular/core": "~11.0.1",
+    "@angular/forms": "~11.0.1",
+    "@angular/language-service": "~11.0.1",
+    "@angular/material": "~11.0.0",
+    "@angular/platform-browser": "~11.0.1",
+    "@angular/platform-browser-dynamic": "~11.0.1",
+    "@angular/router": "~11.0.1",
+    "@nestjs/cli": "~7.5.3",
+    "@nestjs/schematics": "~7.2.2",
+    "@nestjs/testing": "~7.6.4",
+    "@types/bluebird-global": "~3.5.12",
+    "@types/cli-color": "~2.0.0",
+    "@types/fs-extra": "~9.0.4",
+    "@types/jest": "~26.0.15",
+    "@types/js-yaml": "~3.12.5",
+    "@types/markdown-it": "~12.0.0",
+    "@types/node": "~14.14.8",
+    "@types/pako": "~1.0.1",
+    "@types/parse5": "~5.0.3",
+    "@types/source-map-support": "~0.5.3",
+    "@types/supertest": "~2.0.10",
+    "@typescript-eslint/eslint-plugin": "~4.11.0",
+    "@typescript-eslint/parser": "~4.11.0",
+    "eslint": "~7.16.0",
+    "eslint-config-prettier": "~7.1.0",
+    "eslint-plugin-prettier": "~3.3.0",
+    "jest": "~26.6.3",
+    "jest-to-match-shape-of": "~1.3.1",
+    "prettier": "~2.2.1",
+    "rimraf": "~3.0.2",
+    "supertest": "~6.0.1",
+    "ts-jest": "~26.4.4",
+    "ts-loader": "~8.0.11",
+    "ts-node": "~9.1.1",
+    "tsconfig-paths": "~3.9.0",
+    "type-fest": "~0.20.2",
+    "typescript": "~4.0.5",
+    "webpack-bundle-analyzer": "~4.3.0",
+    "zone.js": "~0.11.3"
   }
 }
