--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -22,6 +22,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "importsNotUsedAsValues": "error",
 
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
