style: use index access

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -23,6 +23,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "importsNotUsedAsValues": "error",
+    "noPropertyAccessFromIndexSignature": true,
 
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
