fix: 浏览器端不加载代理

--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -6,5 +6,6 @@
     "strictInjectionParameters": true,
     "strictTemplates": true
   },
+  "include": ["./**/*.ts", "../**/*.browser.ts"],
   "exclude": ["test.ts", "**/*.spec.ts", "**/*.worker.ts"]
 }
