--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "format": "prettier --ignore-path .gitignore --write .",
     "lint": "eslint --ext .ts --ignore-path .gitignore --ignore-pattern **/*.spec.ts -- ."
   },
+  "browser": {
+    "./src/shared/ehentai/proxy.ts": "./src/shared/ehentai/proxy.browser.ts"
+  },
   "private": true,
   "dependencies": {
     "@actions/core": "~1.8.2",
