--- a/package.json
+++ b/package.json
@@ -58,20 +58,20 @@
     "tslib": "~2.4.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.7",
-    "@angular/animations": "~13.3.10",
-    "@angular/cdk": "~13.3.8",
-    "@angular/cli": "~13.3.7",
-    "@angular/common": "~13.3.10",
-    "@angular/compiler": "~13.3.10",
-    "@angular/compiler-cli": "~13.3.10",
-    "@angular/core": "~13.3.10",
-    "@angular/forms": "~13.3.10",
-    "@angular/language-service": "~13.3.10",
-    "@angular/material": "~13.3.8",
-    "@angular/platform-browser": "~13.3.10",
-    "@angular/platform-browser-dynamic": "~13.3.10",
-    "@angular/router": "~13.3.10",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^13.3.8",
+    "@angular/cli": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/language-service": "^14.0.0-rc.3",
+    "@angular/material": "^13.3.8",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "@nestjs/cli": "~8.2.6",
     "@nestjs/schematics": "~8.0.11",
     "@nestjs/testing": "~8.4.6",
@@ -101,7 +101,7 @@
     "ts-node": "~10.8.0",
     "tsconfig-paths": "~4.0.0",
     "type-fest": "~2.13.0",
-    "typescript": "~4.4.4",
+    "typescript": "~4.7.2",
     "webpack-bundle-analyzer": "~4.5.0",
     "zone.js": "~0.11.5"
   }
