ci: fix build script

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "eh-tag-editor",
   "version": "1.0.0",
+  "engines": {
+    "node": "16",
+    "yarn": "1.22"
+  },
   "scripts": {
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
     "test:server": "jest --config ./src/server/jest.config.js --coverage",
-    "heroku-postbuild": "yarn build:server && node scripts/server.js && yarn test:server",
+    "heroku-postbuild": "yarn build:server && yarn test:server && node scripts/server.js",
     "start:tool": "yarn build:tool --watch",
     "build:tool": "tsc --project ./src/tool",
     "test:tool": "yarn tool --help",
