--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
-    "test:server": "jest --config ./src/server/jest.config.js --coverage",
+    "test:server": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./src/server/jest.config.js --coverage",
     "heroku-postbuild": "yarn build:server && yarn test:server && node scripts/server.js",
     "start:tool": "yarn build:tool --watch",
     "build:tool": "tsc --project ./src/tool",
@@ -27,7 +27,7 @@
     "./src/shared/ehentai/http/config.ts": "./src/shared/ehentai/http/config.browser.ts"
   },
   "imports": {
-    "#shared/*": "./dist/shared/*"
+    "#*": "./dist/*"
   },
   "private": true,
   "dependencies": {
@@ -94,6 +94,7 @@
     "@types/supertest": "~2.0.12",
     "@typescript-eslint/eslint-plugin": "~5.28.0",
     "@typescript-eslint/parser": "~5.28.0",
+    "cross-env": "^7.0.3",
     "eslint": "~8.18.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-prettier": "~4.0.0",
