--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
-    "test:server": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./src/server/jest.config.js --coverage",
+    "test:server": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./test/server/jest.config.js",
     "heroku-postbuild": "yarn build:server && yarn test:server && node scripts/server.js",
     "start:tool": "yarn build:tool --watch",
     "build:tool": "tsc --project ./src/tool",
