--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
     "eh-tag-editor": {
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "configurations": {
             "production": {
               "budgets": [
@@ -36,6 +36,9 @@
             }
           },
           "options": {
+            "customWebpackConfig": {
+              "path": "./angular.webpack.config.js"
+            },
             "allowedCommonJsDependencies": ["markdown-it", "linkify-it", "parse5", "axios", "validator"],
             "assets": ["src/browser/favicon.ico", "src/browser/favicon.svg", "src/browser/assets"],
             "buildOptimizer": false,
@@ -59,7 +62,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "eh-tag-editor:build:production"
