--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "tslib": "~2.4.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^14.0.0",
     "@angular-devkit/build-angular": "^14.0.2",
     "@angular/animations": "^14.0.2",
     "@angular/cdk": "^14.0.2",
@@ -101,6 +102,7 @@
     "jest": "~28.1.1",
     "jest-to-match-shape-of": "~1.3.2",
     "prettier": "~2.7.1",
+    "resolve-typescript-plugin": "^1.2.0",
     "rimraf": "~3.0.2",
     "supertest": "~6.2.3",
     "ts-jest": "~28.0.5",
