--- a/src/browser/tsconfig.worker.json
+++ b/src/browser/tsconfig.worker.json
@@ -2,8 +2,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/worker",
-    "lib": ["es2018", "webworker"],
+    "outDir": "../../dist/out-tsc/worker",
+    "lib": ["ES2020", "webworker"],
     "types": []
   },
   "include": ["**/*.worker.ts"],
