--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "../tsconfig.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "outDir": "../../dist/out-tsc",
+    "paths": {
+      "#*": ["../*"]
+    }
+  },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
