--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "rootDir": "./",
-    "outDir": "../dist/out-tsc",
+    "outDir": "../dist",
 
     "sourceMap": true,
     "inlineSources": true,
