build(deps): update deps

--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
   "dependencies": {
     "@actions/core": "~1.9.0",
     "@actions/exec": "~1.1.1",
-    "@nestjs/common": "~8.4.7",
-    "@nestjs/config": "~2.1.0",
-    "@nestjs/core": "~8.4.7",
-    "@nestjs/platform-fastify": "~8.4.7",
-    "@nestjs/swagger": "~5.2.1",
-    "@octokit/auth-app": "~3.6.1",
-    "@octokit/auth-oauth-app": "~4.3.1",
-    "@octokit/rest": "~18.12.0",
+    "@fastify/static": "^6.4.0",
+    "@nestjs/common": "~9.0.2",
+    "@nestjs/config": "~2.2.0",
+    "@nestjs/core": "~9.0.2",
+    "@nestjs/platform-fastify": "~9.0.2",
+    "@nestjs/swagger": "~6.0.1",
+    "@octokit/auth-app": "~4.0.4",
+    "@octokit/auth-oauth-app": "~5.0.1",
+    "@octokit/rest": "~19.0.3",
     "axios": "~0.27.2",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.13.2",
     "cli-color": "~2.0.3",
     "commander": "~9.3.0",
     "escape-string-regexp": "~5.0.0",
-    "fastify-swagger": "~5.2.0",
     "fs-extra": "~10.1.0",
     "idb-keyval": "~6.2.0",
     "js-yaml": "~4.1.0",
@@ -80,9 +80,9 @@
     "@angular/platform-browser": "^14.0.5",
     "@angular/platform-browser-dynamic": "^14.0.5",
     "@angular/router": "^14.0.5",
-    "@nestjs/cli": "~8.2.8",
-    "@nestjs/schematics": "~8.0.11",
-    "@nestjs/testing": "~8.4.7",
+    "@nestjs/cli": "~9.0.0",
+    "@nestjs/schematics": "~9.0.1",
+    "@nestjs/testing": "~9.0.2",
     "@types/cli-color": "~2.0.2",
     "@types/fs-extra": "~9.0.13",
     "@types/jest": "~28.1.4",
