build(deps): update deps

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -30,5 +30,11 @@
 
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
+  },
+
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "strictTemplates": true
   }
 }
