--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@octokit/auth-app": "~4.0.6",
     "@octokit/auth-oauth-app": "~5.0.3",
     "@octokit/rest": "~19.0.4",
-    "axios": "~1.1.1",
+    "axios": "~1.1.2",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.13.2",
     "cli-color": "~2.0.3",
@@ -89,14 +89,14 @@
     "@types/jest": "~29.1.2",
     "@types/js-yaml": "~4.0.5",
     "@types/markdown-it": "~12.2.3",
-    "@types/node": "~18.8.3",
+    "@types/node": "~18.8.4",
     "@types/pako": "~2.0.0",
     "@types/source-map-support": "~0.5.6",
     "@types/supertest": "~2.0.12",
-    "@typescript-eslint/eslint-plugin": "~5.39.0",
-    "@typescript-eslint/parser": "~5.39.0",
+    "@typescript-eslint/eslint-plugin": "~5.40.0",
+    "@typescript-eslint/parser": "~5.40.0",
     "cross-env": "^7.0.3",
-    "eslint": "~8.24.0",
+    "eslint": "~8.25.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-prettier": "~4.2.1",
     "jest": "~29.1.2",
@@ -108,9 +108,12 @@
     "supertest": "~6.3.0",
     "ts-jest": "~29.0.3",
     "tsconfig-paths": "~4.1.0",
-    "type-fest": "~3.0.0",
+    "type-fest": "~3.1.0",
     "typescript": "~4.7.4",
     "webpack-bundle-analyzer": "~4.6.1",
     "zone.js": "~0.11.8"
+  },
+  "resolutions": {
+    "fastify": "^4"
   }
 }
