--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3.1.0
+      - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Setup Node.js
         uses: actions/setup-node@v3.5.1
         with:
@@ -80,6 +81,10 @@ jobs:
           DB_PATH: db
           DB_REPO: EhTagTranslation/Database
         run: yarn test:server
+      - name: Deploy
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        run: flyctl deploy --remote-only
 
   browser:
     runs-on: ubuntu-latest
