--- a/fly.toml
+++ b/fly.toml
@@ -6,7 +6,9 @@ kill_timeout = 5
 processes = []
 
 [env]
-  PORT = 8080
+  PORT = "8080"
+  DB_PATH = "/db"
+  DB_REPO = "EhTagTranslation/Database"
 
 [experimental]
   allowed_public_ports = []
