--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,10 @@ jobs:
           DB_PATH: db
           DB_REPO: EhTagTranslation/Database
         run: yarn test:server
+      - name: Install Prod
+        uses: bahmutov/npm-install@v1
+        env:
+          NODE_ENV: production
       - name: Deploy
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
