--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "@actions/core": "~1.10.0",
     "@actions/exec": "~1.1.1",
-    "@fastify/static": "^6.5.0",
+    "@fastify/static": "^6.5.1",
     "@nestjs/common": "~9.2.0",
     "@nestjs/config": "~2.2.0",
     "@nestjs/core": "~9.2.0",
@@ -41,12 +41,13 @@
     "@octokit/auth-app": "~4.0.7",
     "@octokit/auth-oauth-app": "~5.0.4",
     "@octokit/rest": "~19.0.5",
-    "axios": "~1.1.3",
+    "axios": "~1.2.0",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.13.2",
     "cli-color": "~2.0.3",
     "commander": "~9.4.1",
     "escape-string-regexp": "~5.0.0",
+    "fastify": "^4",
     "fs-extra": "~10.1.0",
     "idb-keyval": "~6.2.0",
     "js-yaml": "~4.1.0",
@@ -55,7 +56,7 @@
     "markdown-it": "~13.0.1",
     "node-cache": "~5.1.2",
     "pako": "~2.1.0",
-    "parse5": "~7.1.1",
+    "parse5": "~7.1.2",
     "proxy-agent": "^5.0.0",
     "reflect-metadata": "~0.1.13",
     "rxjs": "~7.5.7",
@@ -92,8 +93,8 @@
     "@types/pako": "~2.0.0",
     "@types/source-map-support": "~0.5.6",
     "@types/supertest": "~2.0.12",
-    "@typescript-eslint/eslint-plugin": "~5.43.0",
-    "@typescript-eslint/parser": "~5.43.0",
+    "@typescript-eslint/eslint-plugin": "~5.44.0",
+    "@typescript-eslint/parser": "~5.44.0",
     "cross-env": "^7.0.3",
     "eslint": "~8.28.0",
     "eslint-config-prettier": "~8.5.0",
@@ -101,7 +102,7 @@
     "jest": "~29.3.1",
     "jest-to-match-shape-of": "~1.3.2",
     "material-design-icons": "^3.0.1",
-    "prettier": "~2.7.1",
+    "prettier": "~2.8.0",
     "resolve-typescript-plugin": "^2.0.0",
     "rimraf": "~3.0.2",
     "supertest": "~6.3.1",
