--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "tslib": "~2.4.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^14.1.0",
+    "@angular-builders/custom-webpack": "^15.0.0-beta.0",
     "@angular-devkit/build-angular": "^15.0.1",
     "@angular/animations": "^15.0.1",
     "@angular/cdk": "^15.0.0",
