--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -13,7 +13,8 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2020",
+    "target": "ES2022",
+    "useDefineForClassFields": false,
 
     "paths": {
       "#*": ["./*.js"]
