--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,7 @@
             "customWebpackConfig": {
               "path": "./angular.webpack.config.js"
             },
-            "allowedCommonJsDependencies": ["markdown-it", "linkify-it", "parse5", "axios", "validator"],
+            "allowedCommonJsDependencies": ["markdown-it", "linkify-it", "parse5", "axios", "validator", "form-data"],
             "assets": ["src/browser/favicon.ico", "src/browser/favicon.svg", "src/browser/assets"],
             "buildOptimizer": false,
             "extractLicenses": false,
