--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:server": "nest build",
     "test:server": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./test/server/jest.config.js",
     "start:tool": "yarn build:tool --watch",
-    "build:tool": "tsc --project ./src/tool",
+    "build:tool": "node scripts/tool.js",
     "test:tool": "yarn tool --help",
     "tool": "node ./dist/tool",
     "start:browser": "ng serve",
@@ -84,6 +84,10 @@
     "@nestjs/cli": "~9.1.5",
     "@nestjs/schematics": "~9.0.3",
     "@nestjs/testing": "~9.2.0",
+    "@rollup/plugin-alias": "^4.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/cli-color": "~2.0.2",
     "@types/fs-extra": "~9.0.13",
     "@types/jest": "~29.2.3",
@@ -105,6 +109,8 @@
     "prettier": "~2.8.0",
     "resolve-typescript-plugin": "^2.0.0",
     "rimraf": "~3.0.2",
+    "rollup": "^3.4.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "supertest": "~6.3.1",
     "ts-jest": "~29.0.3",
     "tsconfig-paths": "~4.1.0",
