--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "linkify-it": "~4.0.1",
     "markdown-it": "~13.0.1",
     "node-cache": "~5.1.2",
-    "pako": "~2.1.0",
     "parse5": "~7.1.2",
     "proxy-agent": "^6.1.1",
     "reflect-metadata": "~0.1.13",
@@ -93,7 +92,6 @@
     "@types/js-yaml": "~4.0.5",
     "@types/markdown-it": "~12.2.3",
     "@types/node": "~20.0.0",
-    "@types/pako": "~2.0.0",
     "@types/source-map-support": "~0.5.6",
     "@types/supertest": "~2.0.12",
     "@typescript-eslint/eslint-plugin": "~5.59.2",
@@ -102,6 +100,7 @@
     "eslint": "~8.39.0",
     "eslint-config-prettier": "~8.8.0",
     "eslint-plugin-prettier": "~4.2.1",
+    "fflate": "^0.7.4",
     "jest": "~29.5.0",
     "jest-to-match-shape-of": "~1.3.2",
     "material-design-icons": "^3.0.1",
