--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,17 @@
 {
-  "npm.packageManager": "yarn",
-  "eslint.packageManager": "yarn",
-  "eslint.enable": true,
-  "eslint.lintTask.enable": true,
-  "eslint.format.enable": true,
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "vue"],
-  "editor.tabSize": 4,
+  "npm.packageManager": "pnpm",
+  "typescript.tsdk": "node_modules/typescript/lib",
   "files.eol": "\n",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
+  "editor.tabSize": 2,
   "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 4
   },
   "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 4
+  },
+  "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[jsonc]": {
@@ -22,20 +20,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": [
-    "devkit",
-    "execa",
-    "fastify",
-    "keyval",
-    "lazysizes",
-    "linkify",
-    "nestjs",
-    "octokit",
-    "tslib"
-  ],
+  "cSpell.words": ["devkit", "execa", "fastify", "keyval", "lazysizes", "linkify", "nestjs", "octokit", "tslib"],
   "vsicons.presets.angular": true
 }
