--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "type": "module",
   "engines": {
     "node": ">= 16 <= 18",
-    "yarn": "1.22"
+    "pnpm": "^8"
   },
   "scripts": {
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
-    "test:server": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./test/server/jest.config.js",
-    "start:tool": "yarn build:tool --watch",
+    "test:server": "NODE_OPTIONS=\"${NODE_OPTIONS:-} --experimental-vm-modules\" jest --config ./test/server/jest.config.js",
+    "start:tool": "pnpm build:tool --watch",
     "build:tool": "node scripts/tool.js",
-    "test:tool": "yarn tool --help",
+    "test:tool": "pnpm tool --help",
     "tool": "node --trace-deprecation --enable-source-maps -r dotenv/config ./dist/tool",
     "start:browser": "ng serve",
     "build:browser": "ng build --configuration production",
@@ -38,8 +38,9 @@
     "@nestjs/core": "~9.4.0",
     "@nestjs/platform-fastify": "~9.4.0",
     "@nestjs/swagger": "~6.3.0",
-    "@octokit/auth-app": "~4.0.9",
+    "@octokit/auth-app": "~4.0.10",
     "@octokit/auth-oauth-app": "~5.0.5",
+    "@octokit/request-error": "^3.0.3",
     "@octokit/rest": "~19.0.7",
     "axios": "~1.4.0",
     "class-transformer": "~0.5.1",
@@ -47,8 +48,9 @@
     "cli-color": "~2.0.3",
     "commander": "~10.0.1",
     "escape-string-regexp": "~5.0.0",
+    "fastify": "^4.17.0",
     "fs-extra": "~11.1.1",
-    "idb-keyval": "~6.2.0",
+    "idb-keyval": "~6.2.1",
     "js-yaml": "~4.1.0",
     "lazysizes": "~5.3.2",
     "linkify-it": "~4.0.1",
@@ -64,21 +66,21 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^15.0.0",
-    "@angular-devkit/build-angular": "^15.2.6",
-    "@angular/animations": "^15.2.8",
-    "@angular/cdk": "^15.2.8",
-    "@angular/cli": "^15.2.6",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^15.2.8",
-    "@angular/compiler-cli": "^15.2.8",
-    "@angular/core": "^15.2.8",
-    "@angular/forms": "^15.2.8",
-    "@angular/language-service": "^15.2.8",
-    "@angular/material": "^15.2.8",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
-    "@angular/router": "^15.2.8",
-    "@angular/service-worker": "^15.2.8",
+    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
+    "@angular/cli": "^15.2.8",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/compiler-cli": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/forms": "^15.2.9",
+    "@angular/language-service": "^15.2.9",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
+    "@angular/service-worker": "^15.2.9",
     "@nestjs/cli": "~9.4.2",
     "@nestjs/schematics": "~9.1.0",
     "@nestjs/testing": "~9.4.0",
@@ -91,12 +93,12 @@
     "@types/jest": "~29.5.1",
     "@types/js-yaml": "~4.0.5",
     "@types/markdown-it": "~12.2.3",
-    "@types/node": "~20.1.0",
+    "@types/node": "~20.1.1",
     "@types/source-map-support": "~0.5.6",
     "@types/supertest": "~2.0.12",
-    "@typescript-eslint/eslint-plugin": "~5.59.2",
-    "@typescript-eslint/parser": "~5.59.2",
-    "cross-env": "^7.0.3",
+    "@typescript-eslint/eslint-plugin": "~5.59.5",
+    "@typescript-eslint/parser": "~5.59.5",
+    "dotenv": "^16.0.3",
     "eslint": "~8.40.0",
     "eslint-config-prettier": "~8.8.0",
     "eslint-plugin-prettier": "~4.2.1",
