--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           node-version: 18
           pnpm-version: 8
+          args: --offline
       - name: Set env
         run: node ./scripts/info.js
 
@@ -46,7 +47,7 @@ jobs:
         # zip is not working with symbolic link
         run: |
           cd ./dist/tool
-          pnpm install --prod --prefer-offline --no-lockfile --node-linker=hoisted
+          pnpm install --prod --offline --no-lockfile --node-linker=hoisted
           zip -r ../../release.zip .
       - name: Publish release
         uses: ncipollo/release-action@v1.12.0
@@ -71,6 +72,7 @@ jobs:
         with:
           node-version: 18
           pnpm-version: 8
+          args: --offline
       - name: Set env
         run: node ./scripts/info.js
 
@@ -93,7 +95,7 @@ jobs:
         run: pnpm test:server
       - name: Install Prod
         if: github.ref == 'refs/heads/master'
-        run: pnpm install --prod --prefer-offline
+        run: pnpm install --prod --offline
       - name: Deploy
         if: github.ref == 'refs/heads/master'
         env:
@@ -111,6 +113,7 @@ jobs:
         with:
           node-version: 18
           pnpm-version: 8
+          args: --offline
       - name: Set env
         run: node ./scripts/info.js
 
