--- a/fly.toml
+++ b/fly.toml
@@ -1,45 +1,46 @@
-# fly.toml file generated for ehtt on 2022-11-08T17:04:00+08:00
+# fly.toml app configuration file generated for ehtt on 2023-07-09T13:47:09+08:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
 app = "ehtt"
+primary_region = "hkg"
 kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
-
-[env]
-  PORT = "8080"
-  DB_PATH = "/db"
-  DB_REPO = "EhTagTranslation/Database"
+kill_timeout = "5s"
 
 [experimental]
-  allowed_public_ports = []
   auto_rollback = true
 
-[mounts]
-  source="ehtt_db"
-  destination="/db"
+[env]
+  DB_PATH = "/db"
+  DB_REPO = "EhTagTranslation/Database"
+  PORT = "8080"
+
+[[mounts]]
+  source = "ehtt_db_machines"
+  destination = "/db"
+  processes = ["app"]
 
 [[services]]
-  http_checks = []
+  protocol = "tcp"
   internal_port = 8080
   processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
   [services.concurrency]
+    type = "connections"
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "10s"
     interval = "15s"
-    restart_limit = 0
     timeout = "2s"
+    grace_period = "10s"
+    restart_limit = 0
