--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-validator": "~0.14.0",
     "cli-color": "~2.0.3",
     "commander": "~11.0.0",
+    "entities": "^4.5.0",
     "escape-string-regexp": "~5.0.0",
     "fastify": "^4.23.2",
     "fs-extra": "~11.1.1",
