--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "./",
     "rootDir": "./",
     "outDir": "../dist",
+    "noEmit": true,
 
     "sourceMap": true,
     "inlineSources": true,
