--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "type": "module",
   "engines": {
-    "node": "20",
+    "node": "18 || 20",
     "pnpm": "^8"
   },
   "scripts": {
