--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
     "test:server": "NODE_OPTIONS=\"${NODE_OPTIONS:-} --experimental-vm-modules\" jest --config ./test/server/jest.config.js",
-    "start:tool": "pnpm build:tool --watch",
-    "build:tool": "node scripts/tool.js",
+    "start:tool": "node scripts/tool.js --watch",
+    "build:tool": "node scripts/tool.js --minify",
     "test:tool": "pnpm tool --help",
     "tool": "node --trace-deprecation --enable-source-maps -r dotenv/config ./dist/tool",
     "start:browser": "ng serve",
     "build:browser": "ng build --configuration production",
     "test:browser": "echo no test",
-    "analyze:browser": "webpack-bundle-analyzer --mode=static --default-sizes=gzip --report=dist/browser/report.html dist/browser/stats.json",
     "clean": "rimraf dist",
     "format": "prettier --ignore-path .gitignore --write .",
     "lint": "eslint --ext .ts --ignore-path .gitignore --ignore-pattern '**/*.spec.ts' -- ."
@@ -60,7 +59,6 @@
     "reflect-metadata": "~0.1.13",
     "rxjs": "~7.8.1",
     "simple-git": "~3.20.0",
-    "source-map-support": "~0.5.21",
     "tslib": "~2.6.2"
   },
   "devDependencies": {
@@ -82,21 +80,17 @@
     "@nestjs/cli": "~10.2.1",
     "@nestjs/schematics": "~10.0.3",
     "@nestjs/testing": "~10.2.8",
-    "@rollup/plugin-alias": "^5.0.1",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/cli-color": "~2.0.5",
     "@types/fs-extra": "~11.0.4",
     "@types/jest": "~29.5.8",
     "@types/js-yaml": "~4.0.9",
     "@types/markdown-it": "~13.0.6",
     "@types/node": "~20.9.0",
-    "@types/source-map-support": "~0.5.10",
     "@types/supertest": "~2.0.16",
     "@typescript-eslint/eslint-plugin": "~6.10.0",
     "@typescript-eslint/parser": "~6.10.0",
     "dotenv": "^16.3.1",
+    "esbuild": "^0.19.5",
     "eslint": "~8.53.0",
     "eslint-config-prettier": "~9.0.0",
     "eslint-plugin-prettier": "~5.0.1",
@@ -105,16 +99,11 @@
     "jest-to-match-shape-of": "~1.3.2",
     "material-design-icons": "^3.0.1",
     "prettier": "~3.0.3",
-    "resolve-typescript-plugin": "^2.0.1",
     "rimraf": "~5.0.5",
-    "rollup": "^4.3.1",
-    "rollup-plugin-esbuild": "^6.1.0",
     "supertest": "~6.3.3",
     "ts-jest": "~29.1.1",
-    "tsconfig-paths": "~4.2.0",
     "type-fest": "~4.7.1",
     "typescript": "~5.2.2",
-    "webpack-bundle-analyzer": "~4.9.1",
     "zone.js": "~0.14.2"
   }
 }
