--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install
-        uses: NullVoxPopuli/action-setup-pnpm@v2
+        uses: wyvox/action-setup-pnpm@v3
         with:
           node-version: 20
           pnpm-version: 8
@@ -55,7 +55,7 @@ jobs:
       - uses: actions/checkout@v4.1.1
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Install
-        uses: NullVoxPopuli/action-setup-pnpm@v2
+        uses: wyvox/action-setup-pnpm@v3
         with:
           node-version: 20
           pnpm-version: 8
@@ -91,7 +91,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install
-        uses: NullVoxPopuli/action-setup-pnpm@v2
+        uses: wyvox/action-setup-pnpm@v3
         with:
           node-version: 20
           pnpm-version: 8
