ci: update actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
         uses: wyvox/action-setup-pnpm@v3
         with:
           node-version: 20
+          node-version-file: ''
           pnpm-version: 8
       - name: Set env
         run: node ./scripts/info.js
@@ -58,6 +59,7 @@ jobs:
         uses: wyvox/action-setup-pnpm@v3
         with:
           node-version: 20
+          node-version-file: ''
           pnpm-version: 8
       - name: Set env
         run: node ./scripts/info.js
@@ -94,6 +96,7 @@ jobs:
         uses: wyvox/action-setup-pnpm@v3
         with:
           node-version: 20
+          node-version-file: ''
           pnpm-version: 8
       - name: Set env
         run: node ./scripts/info.js
