--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "3.0.0",
   "type": "module",
   "engines": {
-    "node": "18 || 20",
-    "pnpm": "^8"
+    "node": ">=20.10"
   },
+  "packageManager": "pnpm@8",
   "scripts": {
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
@@ -29,12 +29,12 @@
     "@actions/core": "~1.10.1",
     "@actions/exec": "~1.1.1",
     "@actions/http-client": "~2.2.1",
-    "@fastify/static": "^7.0.1",
-    "@nestjs/common": "~10.3.3",
-    "@nestjs/config": "~3.2.0",
-    "@nestjs/core": "~10.3.3",
-    "@nestjs/platform-fastify": "~10.3.3",
-    "@nestjs/swagger": "~7.3.0",
+    "@fastify/static": "^7.0.2",
+    "@nestjs/common": "~10.3.7",
+    "@nestjs/config": "~3.2.1",
+    "@nestjs/core": "~10.3.7",
+    "@nestjs/platform-fastify": "~10.3.7",
+    "@nestjs/swagger": "~7.3.1",
     "@octokit/auth-app": "~6.0.4",
     "@octokit/auth-oauth-app": "~8.0.2",
     "@octokit/request-error": "^6.0.2",
@@ -52,42 +52,42 @@
     "js-yaml": "~4.1.0",
     "lazysizes": "~5.3.2",
     "linkify-it": "~5.0.0",
-    "markdown-it": "~14.0.0",
+    "markdown-it": "~14.1.0",
     "node-cache": "~5.1.2",
     "parse5": "~7.1.2",
-    "reflect-metadata": "~0.2.1",
+    "reflect-metadata": "~0.2.2",
     "rxjs": "~7.8.1",
-    "simple-git": "~3.23.0",
+    "simple-git": "~3.24.0",
     "tslib": "~2.6.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.0",
-    "@angular/animations": "^17.3.0",
+    "@angular-devkit/build-angular": "^17.3.2",
+    "@angular/animations": "^17.3.2",
     "@angular/cdk": "^16.2.14",
-    "@angular/cli": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/compiler-cli": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/language-service": "^17.3.0",
+    "@angular/cli": "^17.3.2",
+    "@angular/common": "^17.3.2",
+    "@angular/compiler": "^17.3.2",
+    "@angular/compiler-cli": "^17.3.2",
+    "@angular/core": "^17.3.2",
+    "@angular/forms": "^17.3.2",
+    "@angular/language-service": "^17.3.2",
     "@angular/material": "^16.2.14",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
-    "@angular/service-worker": "^17.3.0",
+    "@angular/platform-browser": "^17.3.2",
+    "@angular/platform-browser-dynamic": "^17.3.2",
+    "@angular/router": "^17.3.2",
+    "@angular/service-worker": "^17.3.2",
     "@nestjs/cli": "~10.3.2",
     "@nestjs/schematics": "~10.1.1",
-    "@nestjs/testing": "~10.3.3",
+    "@nestjs/testing": "~10.3.7",
     "@types/cli-color": "~2.0.6",
     "@types/fs-extra": "~11.0.4",
     "@types/jest": "~29.5.12",
     "@types/js-yaml": "~4.0.9",
     "@types/markdown-it": "~13.0.7",
-    "@types/node": "~20.11.28",
+    "@types/node": "~20.12.2",
     "@types/supertest": "~6.0.2",
-    "@typescript-eslint/eslint-plugin": "~7.2.0",
-    "@typescript-eslint/parser": "~7.2.0",
+    "@typescript-eslint/eslint-plugin": "~7.5.0",
+    "@typescript-eslint/parser": "~7.5.0",
     "dotenv": "^16.4.5",
     "esbuild": "^0.20.2",
     "eslint": "~8.57.0",
@@ -101,8 +101,8 @@
     "rimraf": "~5.0.5",
     "supertest": "~6.3.4",
     "ts-jest": "~29.1.2",
-    "type-fest": "~4.12.0",
-    "typescript": "~5.3.3",
+    "type-fest": "~4.14.0",
+    "typescript": "~5.4.3",
     "zone.js": "~0.14.4"
   }
 }
