--- a/package.json
+++ b/package.json
@@ -61,21 +61,21 @@
     "tslib": "~2.6.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular/animations": "^17.3.9",
+    "@angular/animations": "^18.0.0",
+    "@angular/build": "^18.0.1",
     "@angular/cdk": "^16.2.14",
-    "@angular/cli": "^17.3.7",
-    "@angular/common": "^17.3.9",
-    "@angular/compiler": "^17.3.9",
-    "@angular/compiler-cli": "^17.3.9",
-    "@angular/core": "^17.3.9",
-    "@angular/forms": "^17.3.9",
-    "@angular/language-service": "^17.3.9",
+    "@angular/cli": "^18.0.1",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/compiler-cli": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/language-service": "^18.0.0",
     "@angular/material": "^16.2.14",
-    "@angular/platform-browser": "^17.3.9",
-    "@angular/platform-browser-dynamic": "^17.3.9",
-    "@angular/router": "^17.3.9",
-    "@angular/service-worker": "^17.3.9",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
+    "@angular/service-worker": "^18.0.0",
     "@commander-js/extra-typings": "^12.1.0",
     "@nestjs/cli": "~10.3.2",
     "@nestjs/schematics": "~10.1.1",
