--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "3.0.0",
   "type": "module",
   "engines": {
-    "node": "^20.15.0"
+    "node": "^20.17.0"
   },
-  "packageManager": "pnpm@9.6.0",
+  "packageManager": "pnpm@9.9.0",
   "scripts": {
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
@@ -19,7 +19,7 @@
     "test:browser": "echo no test",
     "clean": "rimraf dist",
     "format": "prettier --ignore-path .gitignore --write .",
-    "lint": "eslint --ext .ts --ignore-path .gitignore --ignore-pattern '**/*.spec.ts' -- ."
+    "lint": "eslint"
   },
   "imports": {
     "#*": "./dist/*.js"
@@ -28,18 +28,18 @@
   "dependencies": {
     "@actions/core": "~1.10.1",
     "@actions/exec": "~1.1.1",
-    "@actions/http-client": "~2.2.1",
+    "@actions/http-client": "~2.2.2",
     "@fastify/static": "^7.0.4",
-    "@nestjs/common": "~10.3.10",
+    "@nestjs/common": "~10.4.1",
     "@nestjs/config": "~3.2.3",
-    "@nestjs/core": "~10.3.10",
-    "@nestjs/platform-fastify": "~10.3.10",
+    "@nestjs/core": "~10.4.1",
+    "@nestjs/platform-fastify": "~10.4.1",
     "@nestjs/swagger": "~7.4.0",
-    "@octokit/auth-app": "~7.1.0",
+    "@octokit/auth-app": "~7.1.1",
     "@octokit/auth-oauth-app": "~8.1.1",
     "@octokit/request-error": "^6.1.4",
-    "@octokit/rest": "~21.0.1",
-    "axios": "~1.7.2",
+    "@octokit/rest": "~21.0.2",
+    "axios": "~1.7.7",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.14.1",
     "cli-color": "~2.0.4",
@@ -57,43 +57,40 @@
     "parse5": "~7.1.2",
     "reflect-metadata": "~0.2.2",
     "rxjs": "~7.8.1",
-    "simple-git": "~3.25.0",
-    "tslib": "~2.6.3"
+    "simple-git": "~3.26.0",
+    "tslib": "~2.7.0"
   },
   "devDependencies": {
-    "@angular/animations": "^18.1.2",
-    "@angular/build": "^18.1.3",
+    "@angular/animations": "^18.2.3",
+    "@angular/build": "^18.2.3",
     "@angular/cdk": "^16.2.14",
-    "@angular/cli": "^18.1.3",
-    "@angular/common": "^18.1.2",
-    "@angular/compiler": "^18.1.2",
-    "@angular/compiler-cli": "^18.1.2",
-    "@angular/core": "^18.1.2",
-    "@angular/forms": "^18.1.2",
-    "@angular/language-service": "^18.1.2",
+    "@angular/cli": "^18.2.3",
+    "@angular/common": "^18.2.3",
+    "@angular/compiler": "^18.2.3",
+    "@angular/compiler-cli": "^18.2.3",
+    "@angular/core": "^18.2.3",
+    "@angular/forms": "^18.2.3",
+    "@angular/language-service": "^18.2.3",
     "@angular/material": "^16.2.14",
-    "@angular/platform-browser": "^18.1.2",
-    "@angular/platform-browser-dynamic": "^18.1.2",
-    "@angular/router": "^18.1.2",
-    "@angular/service-worker": "^18.1.2",
+    "@angular/platform-browser": "^18.2.3",
+    "@angular/platform-browser-dynamic": "^18.2.3",
+    "@angular/router": "^18.2.3",
+    "@angular/service-worker": "^18.2.3",
     "@commander-js/extra-typings": "^12.1.0",
-    "@nestjs/cli": "~10.4.2",
-    "@nestjs/schematics": "~10.1.3",
-    "@nestjs/testing": "~10.3.10",
+    "@nestjs/cli": "~10.4.5",
+    "@nestjs/schematics": "~10.1.4",
+    "@nestjs/testing": "~10.4.1",
     "@types/cli-color": "~2.0.6",
     "@types/fs-extra": "~11.0.4",
     "@types/jest": "~29.5.12",
     "@types/js-yaml": "~4.0.9",
     "@types/markdown-it": "~14.1.2",
-    "@types/node": "~20.14.13",
+    "@types/node": "~20.14.15",
     "@types/supertest": "~6.0.2",
-    "@typescript-eslint/eslint-plugin": "~7.18.0",
-    "@typescript-eslint/parser": "~7.18.0",
     "dotenv": "^16.4.5",
-    "esbuild": "^0.23.0",
-    "eslint": "~8.57.0",
+    "esbuild": "^0.23.1",
+    "eslint": "~9.9.1",
     "eslint-config-prettier": "~9.1.0",
-    "eslint-plugin-prettier": "~5.2.1",
     "fflate": "^0.8.2",
     "jest": "~29.7.0",
     "jest-to-match-shape-of": "~1.3.2",
@@ -101,9 +98,10 @@
     "prettier": "~3.3.3",
     "rimraf": "~6.0.1",
     "supertest": "~7.0.0",
-    "ts-jest": "~29.2.3",
-    "type-fest": "~4.23.0",
+    "ts-jest": "~29.2.5",
+    "type-fest": "~4.26.0",
     "typescript": "~5.4.5",
-    "zone.js": "~0.14.8"
+    "typescript-eslint": "~8.4.0",
+    "zone.js": "~0.14.10"
   }
 }
