feat: add namespace 'location'

--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -8,7 +8,7 @@
       "#*": ["./*"]
     }
   },
-  "angularCompilerOptions": {
+  "angularCompilerOptions": {e
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "strictTemplates": true
