build: update deps

--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -8,7 +8,7 @@
       "#*": ["./*"]
     }
   },
-  "angularCompilerOptions": {e
+  "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "strictTemplates": true
