refactor(browser,server): 抽取 DB_REPO 统一 GitHub/jsDelivr URL；更新 Vercel 构建配置

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "github": {
-    "silent": true
-  }
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "framework": "angular",
+  "installCommand": "pnpm install",
+  "buildCommand": "pnpm build:browser && pnpm test:browser",
+  "devCommand": "pnpm start:browser --port $PORT",
+  "outputDirectory": "dist/browser"
 }
